<resources>
    <string name="app_name">to_do_list_App</string>
    <string name="hi_user_name"> hi,user name</string>
    <string name="the_list_of_things_you_should_do_this_week">The list of things you should do this week</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wen</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="sunday">Sun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noteClassTitleText">Title</string>
    <string name="discriptionHint">"description goes here "</string>
    <string name="title_activity_navigationdrawer">navigationdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
<string name="aboutApp" >Our to-do list application is designed to help you efficiently plan and manage your weekly schedules. By organizing tasks, setting priorities, and tracking progress, it empowers you to stay focused and productive, ensuring you achieve your goals with ease. </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aboutDeveloper">A dedicated 3rd-year Computer Science student with a passion for mobile and software development. Proficient in Java, C++, HTML, CSS, and JavaScript, showcasing a strong foundation in both front-end and back-end technologies. Continuously learning and exploring the latest trends in the tech world, eager to apply knowledge in practical projects and contribute to innovative solutions. Known for a meticulous approach to coding and a keen interest in building efficient and user-friendly applications. A promising developer ready to make an impact in the tech industry.</string>
</resources>